internal/xds/translator/testdata/out/xds-ir/oidc-backencluster-provider.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: baz
      name: first-route
      route:
        cluster: third-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.oauth2/securitypolicy/envoy-gateway/policy-for-gateway:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
